src/objects/Developmental_Objective__c.object
<CustomObject>
    <fields>
        <fullName>IDP__c</fullName>
        <inlineHelpText>IDP - This field indicates the IDP that the Objective is related to.</inlineHelpText>
        <label>IDP</label>
        <referenceTo>IDP__c</referenceTo>
        <relationshipLabel>Developmental Objectives</relationshipLabel>
        <relationshipName>Developmental_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Objective_Title__c</fullName>
        <inlineHelpText>Objective Title - Enter a brief title that describes your Objective</inlineHelpText>
        <label>Objective Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <inlineHelpText>Objective Description - After entering a description about each Objective click save. Avoid using the following special characters: &gt; &lt; &amp; &quot; &apos; in the text boxes.</inlineHelpText>
        <label>Objective Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Developmental Objective</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OBJ-{0000000}</displayFormat>
        <label>Developmental Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developmental Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>